fix: vh on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .home {
-  min-height: 50vh;
+  min-height: 80vh;
   padding: 5rem 0;
 }
 
